# Softmax-FP16-Approx

./: .clang-format  CMakeLists.txt  README.md  main.cpp  softmax.h
half_float/: half_float.cpp  half_float.h
module/: exponent.cpp  exponent.h  logarithm.cpp  logarithm.h  type.h
